// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Weather correctly 1`] = `
<section
  className="section section--spacing section--bg-earth-light weather"
>
  <div
    className="content-container"
  >
    <div
      className="weather__content"
    >
      <h1
        className="section__title"
      >
        Weather
      </h1>
      <Loading />
      <a
        className="section__attribution"
        href="https://www.wunderground.com/"
        rel="external"
        target="_blank"
      >
        Powered by Weather Underground
      </a>
    </div>
  </div>
</section>
`;

exports[`should render Weather with content correctly 1`] = `
<section
  className="section section--spacing section--bg-earth-light weather"
>
  <div
    className="content-container"
  >
    <div
      className="weather__content"
    >
      <h1
        className="section__title"
      >
        Weather
      </h1>
      <div
        className="content"
      >
        <div
          className="weather__temperature weather__temperature--f"
          onClick={[Function]}
        >
          <h2>
            <span
              className="temp temp--f"
            >
              46.2
              °F
            </span>
            <span
              className="temp temp--c"
            >
              7.9
              °C
            </span>
          </h2>
        </div>
        <div
          className="weather__details"
        >
          <h3>
            Overcast
          </h3>
          <p>
            Queen Village
            , 
            PA
             / 
            US
          </p>
        </div>
      </div>
      <a
        className="section__attribution"
        href="https://www.wunderground.com/"
        rel="external"
        target="_blank"
      >
        Powered by Weather Underground
      </a>
    </div>
  </div>
</section>
`;
